<resources>
    <string name="app_name">ViApp</string>
    <string name="app_description">An intelligent assistant who helps you to detect visions surround you. </string>
    <string name="app_store_url">https://play.google.com/store/apps/details?id=%1$s</string>

    <string name="play_service_url">market://details?id=com.google.android.gms</string>
    <string name="play_service_web">https://play.google.com/store/apps/details?id=com.google.android.gms</string>

    <string name="exit_app">Exit app</string>
    <string name="permission_setting">Set permission</string>
    <string name="permission_relation_to_camera_text">ViApp needs device permission \"CAMERA, RECORD_AUDIO\", consider to grant this permission.</string>
    <string name="permission_relation_to_read_external_storage_text">ViApp needs device permission to read your \"READ_EXTERNAL_STORAGE\", consider to grant this permission.</string>
    <string name="permission_relation_to_write_external_storage_text">ViApp needs device permission to write your \"WRITE_EXTERNAL_STORAGE\", consider to grant this permission.</string>
    <string name="permission_relation_to_location_text">ViApp needs  \"ACCESS_FINE_LOCATION\" to find your places round you.</string>

    <string name="hint_link_image">Link to an image</string>
    <string name="error_can_not_find_file">Can not find file.</string>

    <string name="no_image">Image or photo of target can not be loaded.</string>
    <string name="no_map_app_title">Route unavailable</string>
    <string name="no_map_apps">Can not find route, checkout whether you have map-app on your device.</string>

    <string name="temp_degree">%1$.0f °C</string>

    <string name="action_photo">Capture photo</string>
    <string name="action_video">Make video</string>
    <string name="action_from_local">From local</string>
    <string name="action_from_web">From internet</string>
    <string name="action_my_place">Discover</string>
    <string name="action_settings">Settings</string>
    <string name="action_crop_rotate">Rotate</string>
    <string name="action_confidence">Confidence</string>
    <string name="action_source_license">License</string>
    <string name="action_app_invite">Invite people</string>
    <string name="action_multi_language">More language</string>
    <string name="action_camera_direction">Camera direction</string>

    <string name="tab_vision">Vision</string>
    <string name="tab_history">History</string>
    <string name="demo_web">https://static1.gensler.com/uploads/hero_element/2066/thumb_desktop/thumbs/hero_exp_shanghai-tower_tall-bldgs_1500x750.jpg</string>

    <string name="radius_meter">Radius in meter</string>

    <string name="transition_share_item_name">shareView</string>


    <string name="loading_detail_fail">Cannot load page, close this and try it later.</string>
    <string name="locating_fail">Cannot locate…</string>
    <string name="play_service_fail">PlayService cannot be connected.</string>

    <string name="preference_title">Settings</string>
    <string name="preference_title_datastore">Storage options</string>
    <string name="preference_summary_datastore">Setting on local cache</string>
    <string name="preference_key_datastore_clear_cache">prefs_datastore_clear_cache</string>
    <string name="preference_title_datastore_clear_cache">Cache clear</string>
    <string name="preference_summary_datastore_clear_cache">Delete all data, history.</string>
    <string name="preference_dialogmessage_datastore_clear_cache">Delete all data, history?</string>
    <string name="preference_dialogtitle_datastore_clear_cache">Cache clear</string>
    <string name="preference_dialogok_datastore_clear_cache">OK</string>
    <string name="preference_dialogcancel_datastore_clear_cache">Cancel</string>
    <string name="preference_feedback_cleared_cache">Cache cleared.</string>

    <string name="preference_title_permission">Permissions</string>
    <string name="preference_summary_permission">Grant permissions for some features</string>
    <string name="preference_key_write_external_storage">prefs_write_external_storage</string>
    <string name="preference_title_write_external_storage">Write external storage</string>
    <string name="preference_summary_write_external_storage">Write external storage: android.permission.WRITE_EXTERNAL_STORAGE</string>
    <string name="preference_key_read_external_storage">prefs_read_external_storage</string>
    <string name="preference_title_read_external_storage">Read external storage</string>
    <string name="preference_summary_read_external_storage">Read external storage: android.permission.READ_EXTERNAL_STORAGE</string>
    <string name="preference_key_fine_location">prefs_fine_location</string>
    <string name="preference_title_fine_location">Location</string>
    <string name="preference_summary_fine_location">Location: android.permission.ACCESS_FINE_LOCATION</string>
    <string name="preference_key_camera_usage">prefs_camera_usage</string>
    <string name="preference_title_camera_usage">Camera</string>
    <string name="preference_summary_camera_usage">Camera: android.permission.CAMERA, RECORD_AUDIO</string>

    <string name="preference_title_camera">Camera</string>
    <string name="preference_summary_camera">Camera options</string>
    <string name="preference_key_camera_flash_options">prefs_camera_flash_options</string>
    <string name="preference_title_camera_flash_options">Flash option</string>
    <string name="preference_summary_camera_flash_options">Flash: off, on, torch, auto, red eye</string>
    <string-array name="preference_camera_flash_options_entries">
        <item>off</item>
        <item>on</item>
        <item>torch</item>
        <item>auto</item>
        <item>red eye</item>
    </string-array>
    <string-array name="preference_camera_flash_options_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="preference_key_camera_auto_focus_allowed">prefs_camera_auto_focus_allowed</string>
    <string name="preference_title_camera_auto_focus_allowed">Allow auto-focus</string>
    <string name="preference_summary_camera_auto_focus_allowed">auto-focus allowed</string>
    <string name="preference_key_camera_aspect_ratio">prefs_camera_aspect_ratio</string>
    <string name="preference_title_camera_aspect_ratio">Aspect ratio</string>
    <string name="preference_summary_camera_aspect_ratio">Aspect ratio: 3:2, 4:3, 16:9</string>
    <string-array name="preference_camera_aspect_ratio_entries">
        <item>3:2</item>
        <item>4:3</item>
        <item>16:9</item>
    </string-array>
    <string-array name="preference_camera_aspect_ratio_values">
        <item>3:2</item>
        <item>4:3</item>
        <item>16:9</item>
    </string-array>

    <string name="invitation_title">@string/app_name</string>
    <string name="invitation_message">@string/app_description</string>
    <string name="invitation_image">@string/invite_logo</string>
    <string name="invitation_link">@string/invite_link</string>
    <string name="invitation_cta">Try</string>
    <string name="invitation_error">Some errors happened when opening App-invite, please checkout whether you should update your Play-Service or not.</string>
    <string name="invitation_send_failed">No invitation has been sent.</string>

    <string name="connect_google">Connecting Google…</string>
    <string name="connect_google_fail">Cannot connect Google</string>
    <string name="login_google">Sign In</string>
    <string name="logout_google">Sign Out</string>
    <string name="connect_successfully">Welcome %s!</string>
    <string name="connect_ignore">Skip</string>

    <string name="confidence_title">Confidence</string>
    <string name="confidence_label">Label sensitive</string>
    <string name="confidence_logo">Logo sensitive</string>
    <string name="confidence_image">Image sensitive</string>


    <string name="software_licenses_count">Total %1$d licenses for %2$d libraries and software.</string>

</resources>
