<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                                                xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.preference.Preference
        android:summary="@string/preference_summary_camera"
        android:title="@string/preference_title_camera"
        app:fragment="com.qiaoqiao.settings.SettingContentFragment"
        >
        <extra
            android:name="index"
            android:value="3"/>
        <extra
            android:name="title"
            android:value="@string/preference_title_camera"/>
        <extra
            android:name="header"
            android:value="preferences_camera"/>
    </android.support.v7.preference.Preference>

    <android.support.v7.preference.Preference
        android:summary="@string/preference_summary_datastore"
        android:title="@string/preference_title_datastore"
        app:fragment="com.qiaoqiao.settings.SettingContentFragment"
        >
        <extra
            android:name="index"
            android:value="2"/>
        <extra
            android:name="title"
            android:value="@string/preference_title_datastore"/>
        <extra
            android:name="header"
            android:value="preferences_datastore"/>
    </android.support.v7.preference.Preference>


</android.support.v7.preference.PreferenceScreen>